--- a/Cooking_app/templates/index.html
+++ b/Cooking_app/templates/index.html
@@ -929,6 +929,7 @@
   }
 
   function openSearchOnHeader(){
+    document.getElementById("header-search").style.display = "block";
     document.getElementById("header-search").style.opacity = "1";
     document.getElementById("search-btn-header").style.marginLeft = "-35px"; 
     document.getElementById("search-icon-header").style.width = "18px";
